Version 2024.7.0

New Features:
- Implemented TextStyle support for OpenType font features such as ligatures, kerning, and more.
- Introduced support for MultiColumn layouts, offering more flexible content arrangement.

Layout Issue Debugging Experience:
- Improved the layout debugging feature by providing more detailed information on the reasons behind the SpacePlan.Wrap operation.
- Enhanced visualization for elements that were not drawn or measured on a faulty page.
- For the Row element, added detailed layout debugging information, including type and size for each item.

Optimizations:
- Improved paragraph cache utilization for TextBlock elements within repeating content, such as page footers/headers and decorations before/after content.

Fixes and Enhancements:
- Updated predefined page sizes to use integer values for better consistency with other software.
- Fixed an issue where the Dynamic SVG element might scale its content incorrectly when using certain size units.